--- a/myreactproject/src/components/Image.module.css
+++ b/myreactproject/src/components/Image.module.css
@@ -25,7 +25,7 @@
     width: fit-content;
     /* position: absolute; */
     max-width: 300px;
-    border: 2px solid black;
+    border: 2px solid rgb(51, 48, 228);
 }
 .intro {
     display: flex;
