--- a/myreactproject/src/components/Image.module.css
+++ b/myreactproject/src/components/Image.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 .image {
      
     width: 100vw;
@@ -81,6 +82,8 @@
 
 }
 .home {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-left: 20px;
+    margin: auto 0;
+    font-family: "Montserrat", sans-serif;
 }
